Updated AssemblyInfo and NuSpec

--- a/Source/TinyHandler/TinyHandler.nuspec
+++ b/Source/TinyHandler/TinyHandler.nuspec
@@ -6,12 +6,11 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
-    <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
+    <licenseUrl>https://github.com/emilcardell/TinyHandler/blob/master/license.txt</licenseUrl>
+    <projectUrl>https://github.com/emilcardell/TinyHandler</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
     <copyright>Copyright 2012</copyright>
-    <tags>Tag1 Tag2</tags>
+    <tags>Handler</tags>
   </metadata>
 </package>
