--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\Source\TinyHandler\packages.config" />
+  <repository path="..\Source\TinyHandler.ConsoleSample\packages.config" />
   <repository path="..\Source\TinyHandler.Samples\packages.config" />
+  <repository path="..\Source\TinyHandler\packages.config" />
 </repositories>
